this is so that mihail can see how to put captions under an image

--- a/index.html
+++ b/index.html
@@ -127,15 +127,20 @@
                         <!-- <strong>worth visiting</strong> -->
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/sabra_4.jpg" alt="" style="width:400px; height:300px">
+                    
+                    <figure class="img-set">
+                        <img class="img-responsive img-border img-left" src="img/sabra_4.jpg" alt="" style="width:400px; height:300px" margin = "150px">
+                        <figcaption class="figure-caption text-left center" style="margin-left">Caption goes here Caption goes here </figcaption>
+                    </figure>
+                    
                     <hr class="visible-xs">
                     <!-- <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p> -->
-                    <p>There are two research avenues that I am extremely interested in: one is neuroengineering and the second is creating systems to help people in third world countries. For as long as I can remember I have been interested in the brain, and experiences like interning for Medtronic's Deep Brain Stimulation division cemented my desire to pursue neuroengineering. The motivation to help people in third world countries arose when I visited Dhaka, Bangladesh (my dad's home country) when I was 15 years old. The extreme inequities borne out of circumstance made me want to help those that did not have the same opportunities that I had, and so I created, built and deployed a water purification system called Pani Purification in daycares for street children in Dhaka.
+                    <p>First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a senior at Stanford University, and will be graduating this spring (2018) with a double major with honors in both in electrical engineering (track: control systems), and in biology (track: biochemistry). During my time at Stanford I worked on two main projects: building a portable electrostatic precipitator to reduce respiratory deaths in rural environments (link to published paper: http://ieeexplore.ieee.org/abstract/document/8013316/), and decipering how visual memories are instantiated in 
                     </p>
 
                     <p>Coming into Stanford I wanted to further my experience in both of these areas while bringing my unique perspective from being the daughter of an immigrant, researching clean water solutions in third world countries, participating in Google Science Fair, and interning at Medtronic. The summer between my freshman and sophomore years I was doing an EE REU and was building the largest hardware model of the neocortex using neurogrid. It was incredibly interesting work and I loved it. During one of the EE REU seminars, Professor Rivas presented his lab's milk purifier which could purify an inordinate amount of milk off of a 9V battery. I went up to talk to him after the seminar because it reminded me of the water purification system that I had designed, built and deployed in daycares for street children in Dhaka. I was reminded of how much I missed creating systems to help people, and so the next summer I did an REU with Professor Rivas with the goal of building an electrostatic precipitator to help reduce respiratory death in rural environments.</p>
 
-                    <p>What drew me to power electronics was the breadth of applications and the ability to create projects that can make tangible differences in the world. Despite the wide applicability of power electronics, I can say with confidence that there are three reason why I stuck with my project:</p>
+                    <p>What drew me to power electronics was the breadth of applications and the ability to create projects that can make tangible differences in the world. Despite the wide applicability of power electronics, I can say with confidence that there are three reason why I stuck with my project:</p> 
                 </div>
             </div>
         </div>
