--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Electrical Engineer | Biochemist | Humanitarian </div>
+    <div class="address-bar">Neurobiologist | Electrical Engineer | Humanitarian </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -87,13 +87,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/sabra_1.jpg" alt="" style="height:500px; width:30%">
+                                <img class="img-responsive img-full" src="img/IMG_3244.JPG" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/sabra_2.jpg" alt="" style="height:500px; width:200px">
+                                <img class="img-responsive img-full" src="img/sabra_4.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/sabra_3.jpg" alt="" style="300px; width:200px">
+                                <img class="img-responsive img-full" src="img/barcelonaLion.jpg" alt="">
                             </div>
                         </div>
 
@@ -129,18 +129,15 @@
                     <hr>
                     
                     <figure class="img-set">
-                        <img class="img-responsive img-border img-left" src="img/sabra_4.jpg" alt="" style="width:400px; height:300px" margin = "150px">
-                        <figcaption class="figure-caption text-left center" style="margin-left">Caption goes here Caption goes here </figcaption>
+                        <img class="img-responsive img-border img-left" src="img/IMG_3453.JPG" data-rotate="90" alt="" style="width:300px; height:400px;" margin = "5px">
                     </figure>
                     
                     <hr class="visible-xs">
                     <!-- <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p> -->
-                    <p>First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a senior at Stanford University, and will be graduating this spring (2018) with a double major with honors in both in electrical engineering (track: control systems), and in biology (track: biochemistry). During my time at Stanford I worked on two main projects: building a portable electrostatic precipitator to reduce respiratory deaths in rural environments (link to published paper: http://ieeexplore.ieee.org/abstract/document/8013316/), and decipering how visual memories are instantiated in 
+                    <p>First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a senior at Stanford University, and will be graduating this spring (2018) with a double major with honors in both in electrical engineering (track: control systems), and in biology (track: biochemistry). During my time at Stanford I worked on two main projects: building <a href="http://ieeexplore.ieee.org/abstract/document/8013316/"> a portable electrostatic precipitator to reduce respiratory deaths in rural environments </a> which was published at 2017 IEEE Compel, and decipering how no-net motion visual memories can be entrained and instantiated in fruit flies. Visit my project page to learn about those two and more!
                     </p>
 
-                    <p>Coming into Stanford I wanted to further my experience in both of these areas while bringing my unique perspective from being the daughter of an immigrant, researching clean water solutions in third world countries, participating in Google Science Fair, and interning at Medtronic. The summer between my freshman and sophomore years I was doing an EE REU and was building the largest hardware model of the neocortex using neurogrid. It was incredibly interesting work and I loved it. During one of the EE REU seminars, Professor Rivas presented his lab's milk purifier which could purify an inordinate amount of milk off of a 9V battery. I went up to talk to him after the seminar because it reminded me of the water purification system that I had designed, built and deployed in daycares for street children in Dhaka. I was reminded of how much I missed creating systems to help people, and so the next summer I did an REU with Professor Rivas with the goal of building an electrostatic precipitator to help reduce respiratory death in rural environments.</p>
-
-                    <p>What drew me to power electronics was the breadth of applications and the ability to create projects that can make tangible differences in the world. Despite the wide applicability of power electronics, I can say with confidence that there are three reason why I stuck with my project:</p> 
+                    <p>Other than work I love to travel, dance salsa, run, do any water sport, and eat amazing foods. Throughout my site you'll see photos of me doing just that! I hope you have a great time getting to know me in an albeit limited capacity, and please reach out to me if there is anything you need or that you know might be of interest to me at sabera@stanford.edu.</p>
                 </div>
             </div>
         </div>
