fix jpg extension to JPG

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <img class="img-responsive img-full" src="img/sabra_4.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/barcelonaLion.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/barcelonaLion.JPG" alt="">
                             </div>
                         </div>
 
