fixed aspostrophe in projects header

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Neurobiologist | Electrical Engineer | Humanitarian' </div>
+    <div class="address-bar">Neurobiologist | Electrical Engineer | Humanitarian </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
