--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
                         </h2>
                     -->
                     <h1 style="font-size:125%;"> Clandinin Lab Researcher (03/2017 - 06/2018)</h1>
-                    <img class="img-responsive img-border img-left" src="img/IMG_0451.JPG" alt="" style="width:300px; height:400px">
+                    <img class="img-responsive img-border img-left" src="img/IMG_0451.jpg" alt="" style="width:300px; height:400px">
                     <p>I​ ​had​ ​been​ ​exploring various intersections of neurobiology and engineering​ ​through​ ​my​ ​work​ ​at​ ​Medtronic​ ​and​ ​at​ ​the​ ​Brains​ ​in​ ​Silicon​ ​Lab.​ ​However,​ ​when​ ​I took​ ​Professor Thomas​ ​Clandinin’s​ ​class,​ ​​Molecular​ ​and​ ​Cellular​ ​Neurobiology,​ I was inspired to look specifically at the neural circuitry of visual pattern recognition, as a stepping stone towards artificial memory induction.</p>
 
                     <p>Throughout​ ​the​ ​following​ ​summer​ ​I converged on studying whether or not the fly brain has specific circuits encoding visual pattern memories, and if these circuits could be manipulated in control flies to instantiate memories. In short, I aimed to explore the fly brain at a circuit level by deciphering where pattern recognition memories are stored, and to artificially induce memories into a control population of flies untrained with the visual stimuli. This required a paradigm where I could show flies a neutral visual stimulus that does not drive any particular behavioral response, and then train them with rewards/punishments to selectively respond to a specific feature of the stimulus (i.e. dark edges). This would show that any repetitive behavior (i.e. following dark edges) was learned during training. </p>
