spelling error fix

--- a/projects.html
+++ b/projects.html
@@ -188,7 +188,7 @@
 
                    <img class="img-responsive img-border img-left" src="img/initESP.jpg" alt="" style="width:300px; height:400px">
 
-                   <p> In order to address these contrainsts, my electrostatic precipitator was comprised of a DC-DC converter divided into two main subsystems: a 7-stage class-DE rectifier, and a class phi 2 inverter. In addition to the circuit, I created a novel electrode to precipitate smoke at sub-5kV voltages. Ultimately, my electrostatic precipitator design precipitated 2.5 and 10 micrometer particles below the World Health Organization air guidelines, as well as the Global Alliance for Clean Cookstove guidelines. The electrostatic precipitator was also designed with the safety of the user in mind and does not carry enough charge to harm anyone if it is mishandled.</p>
+                   <p> In order to address these constraints, my electrostatic precipitator was comprised of a DC-DC converter divided into two main subsystems: a 7-stage class-DE rectifier, and a class phi 2 inverter. In addition to the circuit, I created a novel electrode to precipitate smoke at sub-5kV voltages. Ultimately, my electrostatic precipitator design precipitated 2.5 and 10 micrometer particles below the World Health Organization air guidelines, as well as the Global Alliance for Clean Cookstove guidelines. The electrostatic precipitator was also designed with the safety of the user in mind and does not carry enough charge to harm anyone if it is mishandled.</p>
 
                  <!--   <fig>
                         <img class="img-responsive img-border img-left" src="img/initESP.jpg" alt="" style="width:300px; height:400px">
