--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
 <body>
 
-    <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Neurobiologist | Electrical Engineer | Humanitarian </div>
+    <div class="brand">Sabera Talukder </div>
+    <div class="address-bar">Neuroengineer | Researcher | Humanitarian </div>
+   <!--  <div class="brand"><a href="https://twitter.com/SaberaTalukder"><span style="font-size:24pt"><img src="img/twitter.png"><font color="white">@SaberaTalukder</font></span></a></div> -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -57,6 +58,9 @@
                     </li>
                     <li>
                         <a href="projects.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blog</a>
                     </li>
                     <li>
                         <a href="media.html">Media</a>
@@ -89,10 +93,10 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/SaberaGeorgia.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/GSF.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/IMG_6948.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/famCabo.JPG" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/InTheHeights.jpg" alt="">
@@ -101,7 +105,7 @@
                                 <img class="img-responsive img-full" src="img/IMG_1793.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/GSF.jpg" alt=""> 
+                                <img class="img-responsive img-full" src="img/birdBali.jpg" alt=""> 
                             </div>
                         </div>
 
@@ -137,15 +141,15 @@
                     <hr>
                     
                     <figure class="img-set">
-                        <img class="img-responsive img-border img-left" src="img/IMG_3453.JPG" data-rotate="90" alt="" style="width:300px; height:400px;" margin = "5px">
+                        <img class="img-responsive img-border img-left" src="img/sabGrad.JPG" data-rotate="90" alt="" style="width:300px; height:400px;" margin = "5px">
                     </figure>
                     
                     <hr class="visible-xs">
                     <!-- <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p> -->
-                    <p>First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a senior at Stanford University, and will be graduating this spring (2018) with a double major with honors in both in electrical engineering (track: control systems), and in biology (track: biochemistry). During my time at Stanford I worked on two main projects: building <a href="https://superlab.stanford.edu/poster/COMPEL2017_paper_Sabera.pdf"> a portable electrostatic precipitator to reduce respiratory deaths in rural environments </a> which was published at 2017 IEEE Compel, and decipering how no-net motion visual memories can be entrained and instantiated in fruit flies. Visit my project page to learn about those two and more!
+                    <p><br></p>
+                    <p style="text-indent: 80px"> First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a software engineering at the Chan Zuckerberg Biohub where I work on many things related to the brain! I graduated from Stanford University, with a double major with honors in both electrical engineering and biology. <!-- During my time at Stanford I worked on two main projects: building <a href="https://superlab.stanford.edu/poster/COMPEL2017_paper_Sabera.pdf"> a portable electrostatic precipitator to reduce respiratory deaths in rural environments </a> which was published at 2017 IEEE Compel, and decipering how <a href=https://stacks.stanford.edu/file/druid:ps667dn9376/Talukder_Sabera_BioThesis.pdf> no-net motion visual memories can be entrained and instantiated in fruit flies</a>.  --> Visit my project page to learn more about what I have worked on! <br>
                     </p>
-
-                    <p>Other than work I love to travel, dance salsa, run, do any water sport, and eat amazing foods. Throughout my site you'll see photos of me doing just that! I hope you have a great time getting to know me in an albeit limited capacity, and please reach out to me if there is anything you need or that you know might be of interest to me at sabera@stanford.edu.</p>
+                    <p style="text-indent: 80px"> Other than work I love to travel, dance salsa, run, do any water sport, and eat amazing foods. Throughout my site you'll see photos of me doing just that! I hope you have a great time getting to know me in an albeit limited capacity, and please reach out to me if there is anything you need or anything you know of that might be interesting to me! Tweet me <a href="https://twitter.com/SaberaTalukder">@SaberaTalukder</a> or email me at <a href="sabera.j.talukder@gmail.com">sabera.j.talukder@gmail.com</a>.</p>
                 </div>
             </div>
         </div>
@@ -171,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Sabera Talukder 2017</p>
+                    <p>Copyright &copy; Sabera Talukder 2018</p>
                 </div>
             </div>
         </div>
