--- a/media.html
+++ b/media.html
@@ -59,6 +59,9 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
                         <a href="media.html">Media</a>
                     </li>
                     <li>
@@ -372,7 +375,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Sabera Talukder 2017</p>
+                    <p>Copyright &copy; Sabera Talukder 2018</p>
                 </div>
             </div>
         </div>
