--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,11 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
                         <a href="media.html">Media</a>
-                    </li> 
+                    </li>
                     <li>
                         <a href="SaberaTalukderResume2017.pdf">CV</a>
                     </li>
@@ -278,7 +281,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Sabera Talukder 2017</p>
+                    <p>Copyright &copy; Sabera Talukder 2018</p>
                 </div>
             </div>
         </div>
