--- a/media.html
+++ b/media.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
+  <!--   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-125400271-1');
-    </script>
+    </script> -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
