--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-   <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-125400271-1');
-    </script> -->
+    </script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,9 +94,9 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                         <!--    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                        </ol>
+ -->                        </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
@@ -104,17 +104,17 @@
                                 <img class="img-responsive img-full" src="img/GSF.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/famCabo.JPG" alt="">
+                                <img class="img-responsive img-full" src="img/salseros.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/InTheHeights.jpg" alt="">
                             </div>
-                            <div class="item">
+                            <!-- <div class="item">
                                 <img class="img-responsive img-full" src="img/IMG_1793.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/birdBali.jpg" alt=""> 
-                            </div>
+                            </div> -->
                         </div>
 
                         <!-- Controls -->
