--- a/honors.html
+++ b/honors.html
@@ -73,7 +73,7 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="honors.html">Honors</a>
+                        <a href="media.html">Honors</a>
                     </li>
                     <li>
                         <a href="SaberaTalukderResume2017.pdf">CV</a>
@@ -386,6 +386,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <br>
+                    <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+                     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder">Tweet</a>
                     <p>Copyright &copy; Sabera Talukder 2018</p>
                 </div>
             </div>
