--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- https://www.wikihow.com/Insert-Spaces-in-HTML usefull for spaces--> 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,11 +39,23 @@
     <![endif]-->
 
 </head>
+<link rel="shortcut icon" href="img/favicon.ico">
 
 <body>
 
     <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Neuroengineer | Researcher | Creator <br> <br>
+    <div class="address-bar">Neuroengineer | Creator | Researcher <br>
+    <!-- </div>
+    <div> -->
+    <a href="mailto:sabera.j.talukder@gmail.com"><span style="font-size:24pt"><img src="img/email.png"><font color="white"></font></span></a>
+    &nbsp;
+    <a href="https://twitter.com/SaberaTalukder"><span style="font-size:24pt"><img src="img/twitter.png"><font color="white"></font></span></a>
+    &nbsp;
+    <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao"><span style="font-size:20pt"><img src="img/scholar.png"><font color="white"></font></span></a>
+
+    <!-- <div class="brand" vertical-align="top">
+        
+    </div> -->
 
     </div>
 
