--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
     <script>
@@ -44,7 +45,13 @@
 <body>
 
     <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Neuroengineer | Researcher | Creator <br> <br><!-- 
+    <div class="address-bar">Neuroengineer | Creator | Researcher <br>
+    <a href="mailto:sabera.j.talukder@gmail.com"><span style="font-size:24pt"><img src="img/email.png"><font color="white"></font></span></a>
+    &nbsp;
+    <a href="https://twitter.com/SaberaTalukder"><span style="font-size:24pt"><img src="img/twitter.png"><font color="white"></font></span></a>
+    &nbsp;
+    <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao"><span style="font-size:20pt"><img src="img/scholar.png"><font color="white"></font></span></a>
+    <!-- 
     <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder">Tweet</a> --></div>
@@ -291,19 +298,8 @@
     </div>
     <!-- /.container -->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <br>
-                    <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-                     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder">Tweet</a>
-                    <p>Copyright &copy; Sabera Talukder 2018</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
