--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
-                    <hr>
+                    <!-- <hr> -->
                     <h2 class="intro-text text-center">My Projects
                         <!-- <strong>worth visiting</strong> -->
                     </h2>
@@ -294,11 +294,22 @@
                 </div>
             </div>
         </div>
-
     </div>
     <!-- /.container -->
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <br>
+                    <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+                     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder">Tweet</a>
+                    <p>Copyright &copy; Sabera Talukder 2018</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- jQuery -->
