--- a/blog.html
+++ b/blog.html
@@ -138,7 +138,7 @@
 
                 
                 <!-- <div class="col-sm-6 text-center"> -->
-                            <nav>
+                          <!--   <nav> -->
                                 <!-- <ul> -->
                                 <br><br><br><br><br><br>
                                 <div class="col-lg-20" style="text-align:center">
@@ -151,14 +151,47 @@
                                     </font>
                                 </div>
 
+                                <!-- Begin Mailchimp Signup Form -->
+                                <!-- <div class="container contact-form" style="text-align:center; width:575px; height:225px; border:1px solid#00aced; border-radius: 25px; background: #c0deed;"> -->
+                                    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                                    <style type="text/css">
+                                        #mc_embed_signup{text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; font:14px Helvetica,Arial,sans-serif;}
+                                        #mc_embed_signup  input { width: 30%; height: 50%;}
+                                    </style>
+                                    <div id="mc_embed_signup">
+                                    <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                        <div id="mc_embed_signup_scroll">
+                                        <h2><font size="5px" style="color:#0082b4;">Get Notified When My Blog Launches</font></h2>
+                                            <div class="mc-field-group">
+                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your Name (optional)" style="border:1px solid#A9A9A9; border-radius: 3px;">
+                                            </div>
+                                            <br>
+                                            <div class="mc-field-group">
+                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your Email (required)" style="border:1px solid#A9A9A9; border-radius: 3px;">
+                                            </div>
+                                            <br>
+                                        <div id="mce-responses" class="clear">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div>
+                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white;" color="#0084FF">
+                                        </div>
+                                        <br>
+                                    </form>
+                                    </div>
+                                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                                <!-- </div> -->
+<!--End mc_embed_signup-->
+
                                     <!-- Begin MailChimp Signup Form -->
-                                            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                                             <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                                             <style type="text/css">
                                                 #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
                                                 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                                                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                                            </style>
-                                            <div class="container contact-form" style="text-align:center; width:575px; height:225px; border:1px solid #00aced; border-radius: 25px; background: #c0deed;">
+                                            </style> -->
+                                            <!-- <div class="container contact-form" style="text-align:center; width:575px; height:225px; border:1px solid#00aced; border-radius: 25px; background: #c0deed;">
                                                 <div id="mc_embed_signup">
                                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                         <div id="mc_embed_signup_scroll" style="text-align:center;">
@@ -176,28 +209,38 @@
                                                                     <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Your Email (required)">
                                                                 </div>
                                                                 <br>
-                                                                <!-- <div id="mce-responses" class="clear">
+                                                                <div id="mce-responses" class="clear">
                                                                     <div class="response" id="mce-error-response" style="display:none"></div>
                                                                     <div class="response" id="mce-success-response" style="display:none"></div>
-                                                                </div> -->    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                                                <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div> -->
-                                                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white;" color="#0084FF"></div>
+                                                                </div>    real people should not fill this in and expect good things - do not remove this or risk form bot signups
+                                                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div>
+                                                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white;" color="#0084FF">
+                                                                </div>
                                                                 
                                                             </div>
 
-
-                                                            <!-- <div class="col-md-6">
-                                                                <div class="mc-field-group">
-                                                                    <textarea type="text" value="" name="MMERGE2" class="form-control" id="mce-MMERGE2" placeholder="Your Message (optional)" style="width: 82%; height: 82px;"></textarea>
-                                                                </div>
-                                                            </div> -->
                                                         </div>
                                                     </form>
                                                 </div>
-                                            </div>
-                                            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                                            </div>  -->
+                                            <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+ -->
+                                  <!--   </font>
+                                </ul>  
+                            </nav>                  
+                <!-- </div> -->
+                <!-- <div class="col-sm-8 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3> Flies
+                        <small>KKKlan</small>
+                    </h3>
+                </div>xs
+                <div class="clearfix"></div> -->
+            </div>
+        </div>
+        <!-- blog examples -->
 
-                                       <!--  <div class="col-lg-20">
+        <!--  <div class="col-lg-20">
                                             <h3>
                                             <a href="blogPost1.html" style="color:#0082b4" align="left">My First Blog Post!</a> <small>September 16, 2018</small>
                                             <br>
@@ -273,19 +316,7 @@
                                         <li>7</li>
                                         <li>8</li>
                                         <li>9</li> -->
-                                    </font>
-                                <!-- </ul>   -->
-                            </nav>                  
-                <!-- </div> -->
-                <!-- <div class="col-sm-8 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3> Flies
-                        <small>KKKlan</small>
-                    </h3>
-                </div>
-                <div class="clearfix"></div> -->
-            </div>
-        </div>
+                <!-- end blog examples -->
 
         <!-- <div class="row">
             <div class="box">
