blog subscribe fix

--- a/blog.html
+++ b/blog.html
@@ -152,11 +152,12 @@
                                 </div>
 
                                 <!-- Begin Mailchimp Signup Form -->
-                                <!-- <div class="container contact-form" style="text-align:center; width:575px; height:225px; border:1px solid#00aced; border-radius: 25px; background: #c0deed;"> -->
+                                <!-- <div class="center"> -->
                                     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                                     <style type="text/css">
-                                        #mc_embed_signup{text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; font:14px Helvetica,Arial,sans-serif;}
-                                        #mc_embed_signup  input { width: 30%; height: 50%;}
+                                        #mc_embed_signup{text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; font:14px Helvetica,Arial,sans-serif; margin-left:25%; margin-right:25%;}
+                                        /*#mc_embed_signup  input { width: 30%; height: 50%;}*/
+                                        #mc_embed_signup .mc-field-group {height: 300%;}
                                     </style>
                                     <div id="mc_embed_signup">
                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -364,7 +365,7 @@
                     -->
                     <!-- <h1 style="font-size:125%;"> What is Neuroengineering? (09/10/18)</h1> -->
                 
-                <<!-- /div>
+                <!-- /div>
             </div> -->
     </div>
 
