--- a/blog.html
+++ b/blog.html
@@ -176,7 +176,7 @@
                                             <div class="response" id="mce-success-response" style="display:none"></div>
                                         </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div>
-                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white;" color="#0084FF">
+                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white; margin-left:25%; margin-right:25%;" color="#0084FF">
                                         </div>
                                         <br>
                                     </form>
