--- a/honors.html
+++ b/honors.html
@@ -158,7 +158,7 @@
                         </h2>
                     -->
                     <h1 style="font-size:125%;"> Electrical Engineering Honors Thesis (06/2016 - 06/2018)</h1>
-                    <p> Honors​ ​Thesis entitled:​ ​A​ ​smoke​ ​removing​ ​DC-DC​ ​converter​ ​composed​ ​of​ ​a 7-stage​ ​class-DE​ ​rectifier​ ​and​ ​a​ ​class​ ​phi​ ​2​ ​inverter. Will be uploaded to Stanford Libraries soon.</p>
+                    <p> Honors​ ​Thesis entitled:​ ​A​ ​smoke​ ​removing​ ​DC-DC​ ​converter​ ​composed​ ​of​ ​a 7-stage​ ​class-DE​ ​rectifier​ ​and​ ​a​ ​class​ ​phi​ ​2​ ​inverter. Hosted by Stanford Libraries <a href="https://stacks.stanford.edu/file/druid:zt492wh8993/Talukder-thesis.pdf">here</a>.</p>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
                         </h2>
                     -->
                     <h1 style="font-size:125%;"> Biology Honors Thesis (03/2017 - 06/2018)</h1>
-                    <p> Honors​ ​Thesis entitled:​ ​Exploring​ ​visual​ ​memories​ ​in​ ​fruit​ ​flies​ ​via​ ​a​ ​closed​ ​loop​ ​visual​ ​system. Will be uploaded to Stanford Libraries soon.</p>
+                    <p> Honors​ ​Thesis entitled:​ ​Exploring​ ​visual​ ​memories​ ​in​ ​fruit​ ​flies​ ​via​ ​a​ ​closed​ ​loop​ ​visual​ ​system. Hosted by Stanford Libraries <a href="https://stacks.stanford.edu/file/druid:ps667dn9376/Talukder_Sabera_BioThesis.pdf">here</a>.</p>
                 </div>
             </div>
         </div>
