--- a/honors.html
+++ b/honors.html
@@ -106,7 +106,7 @@
                     <img class="img-responsive img-border-left" src="img/sabra_4.jpg" alt="" style="width:400px; height:300px">
                 </div> -->
                 <!-- <div class="col-md-6"> -->
-                    <p>Thanks to my research directions of neuroengineering and creating systems to help people in third world countries, I have had many amazing opportunites to speak about my work and be funded to continue my work. Listed below are a subset of the publicity and scholarships that I have recieved.
+                    <p>Thanks to my research directions of neuroengineering and creating systems to help people in third world countries, I have had many amazing opportunites to speak about my work and be funded to continue my work. Listed below are a subset of the publicity and scholarships that I have received.
                     </p>
                 <!-- </div> -->
                 <div class="clearfix"></div>
