--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,12 @@
       gtag('config', 'UA-125400271-1');
     </script>
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@SaberaTalukder">
+    <meta name="twitter:creator" content="@SaberaTalukder">
+    <meta name="twitter:title" content="What is Neuroengineering">
+    <meta name="twitter:description" content="This blog post is about neuroengineering, neural engineering, and neurotechnology">
+    <meta name="twitter:image" content="https://saberatalukder.com/img/GSF.jpg">
 
 
     <meta charset="utf-8">
@@ -110,7 +116,7 @@
                 <br><br><br><br>
                     <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3>
-                                        <a href="win.html" style="color:#0082b4" align="left">What is Neuroengineering?</a> <small>October 15, 2018</small>
+                                        <a href="what_is_neuroengineering.html" style="color:#0082b4" align="left">What is Neuroengineering?</a> <small>October 15, 2018</small>
                                         <br>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuro</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='AItag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
@@ -119,16 +125,17 @@
                                     </h3>
                                             
                                     <figure class="img-set">
-                                        <a href="win.html">
+                                        <a href="what_is_neuroengineering.html">
                                             <img class="img-border img-left" src="img/brainCover.jpg" alt="" style="width:25%; height:25%; border-radius:10px;">
                                         </a>
                                     </figure>
-                                    <p> <a href="win.html"> <font color="505050">My first blog post is about the brain, because everything neuroengineering is my academic passion!</font></a>
+                                    <p><font face="Garamond" size="5px" color="505050">You have heard variations of these words in whispers throughout the internet, but you might not actually know what they mean; no one could blame you!...
+                                    <br>
+                                    <b><u>Keywords:</u></b> Neuroengineering, Optogenetics, Neural prosthetics, Brain Computer Interfaces, Neuromorphic Computing, Artificial Intelligence
+                                    </font>
+
 
                                     </p>
-
-
-                                    <br><br><br><br><br><br><br>
 
                                 </div>
 
