--- a/blog.html
+++ b/blog.html
@@ -112,8 +112,8 @@
                     <hr>
                 </div>
 
-                <br><br><br><br>
-                    <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                <br><br><br><br><br><br>
+                  <!--   <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3>
                                         <a href="what_is_neuroengineering.html" style="color:#0082b4" align="left">What is Neuroengineering?</a> <small>October 15, 2018</small>
                                         <br>
@@ -139,7 +139,7 @@
                                 </div>
 
                                 <hr>
-
+ -->
                                     <!-- Begin MailChimp Signup Form -->
                                             <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 25%; margin-left: 25%;">
                                                 <div id="mc_embed_signup">
