--- a/blog.html
+++ b/blog.html
@@ -13,13 +13,6 @@
       gtag('config', 'UA-125400271-1');
     </script>
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@SaberaTalukder">
-    <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="What is Neuroengineering">
-    <meta name="twitter:description" content="This blog post is about neuroengineering, neural engineering, and neurotechnology">
-    <meta name="twitter:image" content="https://saberatalukder.com/img/GSF.jpg">
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -183,6 +176,28 @@
                 <div class="clearfix"></div>
             </div>
         </div>
+
+        <div id="disqus_thread"></div>
+        <script>
+
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://saberatalukder.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
 
         <!-- <div class="row">
             <div class="box">
