--- a/blog.html
+++ b/blog.html
@@ -176,6 +176,7 @@
                 <div class="clearfix"></div>
             </div>
         </div>
+        <p>Disqus should be appearing!!</p>
 
         <div id="disqus_thread"></div>
         <script>
