--- a/blog.html
+++ b/blog.html
@@ -134,6 +134,7 @@
                                 <hr>
  -->
                                     <!-- Begin MailChimp Signup Form -->
+                                    <p>DEBUG DEBUG DEBUG</p>
                                             <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 25%; margin-left: 25%;">
                                                 <div id="mc_embed_signup">
                                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
