trying the upload

--- a/what_is_neuroengineering.html
+++ b/what_is_neuroengineering.html
@@ -48,7 +48,7 @@
     <![endif]-->
 
 
-    
+
 <!--     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
@@ -116,10 +116,10 @@
                     <hr>
 	                    <font size="6px"><h2 class="intro-text text-center">What is Neuroengineering?</font>
 	                    <br><br>
-	                    <font size="4px">October 22, 2018</font>
-                        <h3 style="margin-left: 38.5%">
-                                        <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuro</b></button>
+	                    <font size="4px">October 29, 2018</font>
+                        <h3 style="margin-left: 34%">
                                         <button type="button" class="btn btn-info" onclick="window.location.href='AItag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
                                         </h3>
 	                        <!-- <strong>worth visiting</strong> -->
@@ -360,21 +360,26 @@
                                         <br><br>
 
                                     </p>
+                                    </font>
+                                    <hr>
+                                    <p><font size="2px" style="line-height:0.4;">
+                                    &emsp; In this article I referenced: (1) Neural prosthetic work from Brown University, (2) Neural prosthetic work from Stanford University, (3) Neural interface work from CTRL -labs, (4) Neuroprosthetic work for the neuropixel probe, (5) Optogenetics work from Stanford University, (6) Neuromorphic computing work from Stanford University, (7) Work from 3blue1brown, and (8) work from DeepMind.
+                                    </font>
+                                    </p>
                                     <hr>
                                     <br>
                                     <p style="text-align: center;">
                                     <font face="Garamond" size="5px" >If you like my content let me know, by tweeting or subscribing below!</font> 
                                     </p>
-                                    </font>
                                     <font size = "4px">
                                         </div>
                                             <br>
                                         <!-- Begin MailChimp Signup Form -->
-                                            <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 17%; margin-left: 17%;">
+                                            <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 10%; margin-left: 10%; width: 80%;">
                                                 <div id="mc_embed_signup">
                                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                         <div id="mc_embed_signup_scroll" style="text-align:center;">
-                                                        <h2><font size="5px" style="color:#0082b4;">Get my Blog Posts Directly to Your Email</font></h2>
+                                                        <h2><font size="5px" style="color:#0082b4;">Get Blog Posts Directly to Your Email!</font></h2>
 
                                                         <div class="row">
                                                             <div class="col-md-12" style="align-content:center">
