fixing a broken page

--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
                     <h3 style="line-height: 1.6;">
                                         <a href="what_is_neuroengineering.html" style="color:#505050" align="left">What is Neuroengineering?</a> <small style="color:#000">October 29, 2018</small>
                                         <br>
-                                        <button type="button" class="btn btn-info" onclick="window.location.href='AItag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
 
