--- a/what_is_neuroengineering.html
+++ b/what_is_neuroengineering.html
@@ -118,7 +118,7 @@
 	                    <br><br>
 	                    <font size="4px">October 29, 2018</font>
                         <h3 style="margin-left: 34%">
-                                        <button type="button" class="btn btn-info" onclick="window.location.href='AItag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
                                         </h3>
