updating twitter card

--- a/what_is_neuroengineering.html
+++ b/what_is_neuroengineering.html
@@ -17,8 +17,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="What is Neuroengineering">
-    <meta name="twitter:description" content="This blog post is about neuroengineering, neural engineering, and neurotechnology">
+    <meta name="twitter:title" content="What is Neuroengineering?">
+    <meta name="twitter:description" content="Neuroengineering. Neural engineering. Neurotechnology. You have heard variations of these words in whispers throughout the internet...">
     <meta name="twitter:image" content="https://saberatalukder.com/img/neural_cover.jpg">
 
 
