--- a/what_is_neuroengineering.html
+++ b/what_is_neuroengineering.html
@@ -225,7 +225,7 @@
                                             <li>&emsp;Once we have our separated spikes we have to read them! We accomplish this with: <u>software that performs neural decoding.</u> Before we jump into neural decoding let's define some terminology. Neural encoding is how we map a behavior to the neural responses the behavior evokes. Neural decoding is how we map from neural responses to the behavior encoded in those neural responses. 
                                             <img class="img-border img-left" src="img/neural_encoding_neural_decoding_2.png" alt="Picture of the neuropixel probe that is inserted in the brain. The probe is common for many neuroengineering studies." style="width:100%; height:100%; margin-top: 3%; margin-bottom: 5%; border-radius:30px; border-width:thick">
                                             <br><br>
-                                            &emsp;You can perform neural encoding for humans, or some monkeys that have similar neural architectures to humans. The data generated can then be useful to create neural decoders. In Cathy's case, we can use a neural decoder to control a robotic arm. 
+                                            &emsp;You could perform neural encoding in humans, but it is more common to use monkeys that have similar neural architectures to humans. The data generated can then be useful to create neural decoders. In Cathy's case, we can use a neural decoder to control a robotic arm. 
                                             <br><br>
                                             &emsp;Neural decoders can be broken up into discrete and continuous decoders. Discrete decoders are concerned with decoding the final state of an action, while continuous decoders are concerned with decoding the entire progression of an action. Can you guess which type of decoder was used for Cathy?
                                             What about the decoder used in the video below?
@@ -363,7 +363,7 @@
                                     </font>
                                     <hr>
                                     <p><font size="2px" style="line-height:0.4;">
-                                    &emsp; In this article I referenced: (1) Neural prosthetic work from Brown University, (2) Neural prosthetic work from Stanford University, (3) Neural interface work from CTRL -labs, (4) Neuroprosthetic work for the neuropixel probe, (5) Optogenetics work from Stanford University, (6) Neuromorphic computing work from Stanford University, (7) Work from 3blue1brown, and (8) work from DeepMind.
+                                    &emsp; In this article I referenced: [1] Neural prosthetic work from Brown University, [2] Neural prosthetic work from Stanford University, [3] Neural interface work from CTRL -labs, [4] Neuroprosthetic work for the neuropixel probe, [5] Optogenetics work from Stanford University, [6] Neuromorphic computing work from Stanford University, [7] Work from 3blue1brown, and [8] work from DeepMind.
                                     </font>
                                     </p>
                                     <hr>
