--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -12,8 +12,6 @@
       gtag('config', 'UA-125400271-1');
     </script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- twitter summary card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
@@ -109,7 +107,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container" style="width:67%">
+    <div class="container" style=" margin-left:5%; margin-right:2%;">>
 
         <div class="row">
             <div class="box">
