testing mobile centering 1

--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -107,7 +107,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container" style=" margin-left:5%; margin-right:2%;">>
+    <div class="container" style="width:67%">
 
         <div class="row">
             <div class="box">
@@ -116,7 +116,7 @@
                         <font size="6px"><h2 class="intro-text text-center">What is Neuroengineering?</font>
                         <br><br>
                         <font size="4px">October 29, 2018</font>
-                        <h3 style="margin-left: 34%">
+                        <h3 class="text-center">
                                         <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
@@ -132,7 +132,7 @@
                                     <!-- <font size = "3px"> -->
                                         <p>
                                         <br>
-                                        <h3 style="width: 100%; text-align:center; margin-left: -2.5%">Neuroengineering. Neural engineering. Neurotechnology.</h3>
+                                        <h3 class="text-center">Neuroengineering. Neural engineering. Neurotechnology.</h3>
                                         <br>
                                         <font face="Garamond" size="5px" style="line-height: 1.6;">&emsp;You have heard variations of these words in whispers throughout the internet, but you might not actually know what they mean. And it's no wonder! A simple Google search of the term ‘neuroengineering’ returns an expansive yet unhelpful Wikipedia page and fairly nondescript university landing sites.
                                         <br><br>
