testing mobile centering 2 ul width

--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -127,7 +127,7 @@
                 </div>
                 
                 <!-- <div class="col-sm-6 text-center"> -->
-                                <ul style="width: 90%; margin:auto;">
+                                <ul style="margin:auto;">
                                     <div class="col-lg-40" style="text-align:left">
                                     <!-- <font size = "3px"> -->
                                         <p>
